updated books from the podcast

--- a/en/_posts/2016-02-03-podcast-32.md
+++ b/en/_posts/2016-02-03-podcast-32.md
@@ -6,7 +6,7 @@ img: "podcast-32.jpg"
 
 # The Podcast #32 - How To Get Fat
 
-New episode of your [favorite weekly podcast][p] about "technology, productivity tips, business, publishing, and whatever else comes to mind..." is out! This time we talk about diets and about what really makes us fat. Ok, Radek talks and I listen:
+New episode of your [favorite weekly podcast][p] about "technology, productivity tips, business, publishing, and whatever else comes to mind..." is out! This time we talk about diets and about what really makes us fat in the context of the book *Why We Get Fat?* ([Amazon][am] or [Audible][au]). Ok, Radek talks and I listen:
 
 <!--More-->
 
@@ -24,8 +24,8 @@ Radek is very impressed by the book [How we get fat][b1] which I reviewed earlie
 
 ## Show notes for this episode:
 
-  * [Gary Taubes - Why We Get Fat](http://www.amazon.com/Why-We-Get-Fat-About/dp/0307474259/) ([Audible](http://www.audible.com/pd/Nonfiction/Why-We-Get-Fat-Audiobook/B004D5K512))
-  * Why We Get Fat critique: [One](http://www.weightymatters.ca/2011/01/book-review-gary-taubes-why-we-get-fat.html), [Two](http://www.amazon.com/gp/customer-reviews/RR5W0ZMOAFGIZ/ref=cm_cr_pr_rvw_ttl?ie=UTF8&ASIN=0307474259)
+
+* Why We Get Fat critique: [One](http://www.weightymatters.ca/2011/01/book-review-gary-taubes-why-we-get-fat.html), [Two](http://www.amazon.com/gp/customer-reviews/RR5W0ZMOAFGIZ/ref=cm_cr_pr_rvw_ttl?ie=UTF8&ASIN=0307474259)
 
 Picks:
 
@@ -34,6 +34,8 @@ Picks:
   * [Happy Money: The Science of Happier Spending](http://www.amazon.com/Happy-Money-Science-Happier-Spending/dp/1451665075)
   * [Ash Furrow — Perfectionism](https://ashfurrow.com/blog/perfectionism/)
 
+[am]: https://www.amazon.com/dp/0307474259?tag=sliwinski-20
+[au]: https://www.audible.com/pd/B004D5K512?tag=sliwinski-20
 [b1]: /book-why-fat/
 [b2]: /slow-carb-diet/
 
