--- a/en/_posts/2016-06-08-podcast-50.md
+++ b/en/_posts/2016-06-08-podcast-50.md
@@ -6,7 +6,7 @@ img: "podcast-50.jpg"
 
 # The Podcast #50 - Four Disciplines
 
-Wow! The 50th episode of your [favorite weekly podcast][p] about "[productivity](/productivity), [business](/business), [books](/books), and whatever else comes to mind..." is out! This time we dive deep into a book called "The four disciplines of execution" and we are discussing how you can get your goals done by basically tracking things you didn't think you should be. And doing it regularly:
+Wow! The 50th episode of your [favorite weekly podcast][p] about "[productivity](/productivity), [business](/business), [books](/books), and whatever else comes to mind..." is out! This time we dive deep into a book called *"The four disciplines of execution"* ([Amazon][am] or [Audible][au]) and we are discussing how you can get your goals done by basically tracking things you didn't think you should be. And doing it regularly:
 
 <!--More-->
 
@@ -24,20 +24,25 @@ And it's our 50th episode! Wow come celebrate with us by listening to our show a
 
 ## Show notes for this episode:
 
-  * [The 4 Disciplines of Execution](http://www.amazon.com/Disciplines-Execution-Covey-Rajan-Kaicker/dp/1471142086/) ([audible](http://www.audible.com/pd/Business/The-4-Disciplines-of-Execution-Audiobook/B00DD0846Q/))
-  * [Radek's notes for 4 Disciplines of Execution](http://radex.io/books/4dx/)
-  * [The 7 Habits of Highly Effective People: Powerful Lessons in Personal Change](http://www.amazon.com/Habits-Highly-Effective-People-Powerful/dp/1451639619/) ([audible](http://www.audible.com/pd/Business/The-7-Habits-of-Highly-Effective-People-Audiobook/B002V5HAL4/))
-  * [First Things First](http://www.amazon.com/First-Things-Stephen-R-Covey/dp/0684802031/) ([audible](http://www.audible.com/pd/Business/First-Things-First-Audiobook/B002V02X6Q/))
-  * [Course 10 Steps for Ultimate Productivity](https://www.youtube.com/playlist?list=PL4VGcOPPsP4OnVuDc-4D0PXzlKET4FhgL)
-  * [Domino chain reaction (power of leverage!)](https://www.youtube.com/watch?v=y97rBdSYbkg)
-  * Whirwind: ties back to [The Podcast 49: Zero sum game](/podcast-49)
-  * [Weekly Review: The Podcast 27](/podcast-27)
-**The corners**
-  * [SwiftCoders 17: Radek Pietruszewski - iOS Developer & Swift Summit Speaker](http://swiftcoders.podbean.com/e/17-radek-pietruszewski-ios-developer-at-nozbe/)
-  * [Falcon 9 almost tipping over](http://imgur.com/a/v1hUd)
-  * [Incredible footage from Falcon 9 descent, reentry and landing](https://www.youtube.com/watch?v=4jEz03Z8azc)
-  * [Elon Musk interview at Code Conference](https://www.youtube.com/watch?v=wsixsRI-Sz4)
+* [Radek's notes for 4 Disciplines of Execution](http://radex.io/books/4dx/)
+* [The 7 Habits of Highly Effective People: Powerful Lessons in Personal Change](http://www.amazon.com/Habits-Highly-Effective-People-Powerful/dp/1451639619/) ([audible](http://www.audible.com/pd/Business/The-7-Habits-of-Highly-Effective-People-Audiobook/B002V5HAL4/))
+* [First Things First](http://www.amazon.com/First-Things-Stephen-R-Covey/dp/0684802031/) ([audible](http://www.audible.com/pd/Business/First-Things-First-Audiobook/B002V02X6Q/))
+* [Course 10 Steps for Ultimate Productivity](https://www.youtube.com/playlist?list=PL4VGcOPPsP4OnVuDc-4D0PXzlKET4FhgL)
+* [Domino chain reaction (power of leverage!)](https://www.youtube.com/watch?v=y97rBdSYbkg)
+* Whirwind: ties back to [The Podcast 49: Zero sum game](/podcast-49)
+* [Weekly Review: The Podcast 27](/podcast-27)
 
+**The corners**
+  
+* [SwiftCoders 17: Radek Pietruszewski - iOS Developer & Swift Summit Speaker](http://swiftcoders.podbean.com/e/17-radek-pietruszewski-ios-developer-at-nozbe/)
+* [Falcon 9 almost tipping over](http://imgur.com/a/v1hUd)
+* [Incredible footage from Falcon 9 descent, reentry and landing](https://www.youtube.com/watch?v=4jEz03Z8azc)
+* [Elon Musk interview at Code Conference](https://www.youtube.com/watch?v=wsixsRI-Sz4)
+
+
+
+[am]: https://www.amazon.com/dp/1982156988?tag=sliwinski-20
+[au]: https://www.audible.com/pd/B00DD0846Q?tag=sliwinski-20
 [e]: /podcast-50
 [p]: /podcast
 [n]: https://michael.gratis/nozbe
