--- a/en/_posts/2016-06-29-podcast-53.md
+++ b/en/_posts/2016-06-29-podcast-53.md
@@ -1,12 +1,12 @@
 ---
-tags: [podcast]
+tags: [podcast,books]
 podcast: 1012329770
 img: "podcast-53.jpg"
 ---
 
 # The Podcast #53 - Originals
 
-New episode of your [favorite weekly podcast][p] about "[productivity](/productivity), [business](/business), [books](/books), and whatever else comes to mind..." is out! This time we talk about a book called "Originals" about original ideas, business, procrastination and why this book describes the story of my life:
+New episode of your [favorite weekly podcast][p] about "[productivity](/productivity), [business](/business), [books](/books), and whatever else comes to mind..." is out! This time we talk about a book called *"Originals"* ([Amazon][am] or [Audible][au]) about original ideas, business, procrastination and why this book describes the story of my life:
 
 <!--More-->
 
@@ -26,16 +26,18 @@ And how do you like our new intro? How should we introduce ourselves? Suggestion
 
 ## Show notes for this episode:
 
-  * [Originals: How Non-Conformists Move the World](https://www.amazon.com/Originals-How-Non-Conformists-Move-World/dp/0525429565?ie=UTF8&tag=radexio-20) ([Audible](http://www.audible.com/pd/Business/Originals-Audiobook/B01A7Q6672/?tag=radexio-20))
-  * [Radek's notes for Originals](http://radex.io/books/originals/)
-  * [How to Fly a Horse: The Secret History of Creation, Invention, and Discovery](https://www.amazon.com/How-Fly-Horse-Invention-Discovery/dp/0804170061) ([Audible](http://www.audible.com/pd/Science-Technology/How-to-Fly-a-Horse-Audiobook/B00RY75S18))
-  * [Outliers: The Story of Success](https://www.amazon.com/Outliers-Story-Success-Malcolm-Gladwell/dp/0316017930) ([Audible](http://www.audible.com/pd/Nonfiction/Outliers-Audiobook/B002UZDRK8))
-  * [The Podcast 43 — why audiobooks?](/podcast-43)
-  * [The Podcast 34 — on morning routines](/podcast-34)
-  * [Jak oszczędzać pieniądze? (Polish blog about personal savings)](http://jakoszczedzacpieniadze.pl/)
-  * [Interview with Sean Platt in Productive! Magazine №32](http://productivemag.com/32/interview-with-sean-platt)
-  * [Join our productivity webinar: How to communicate through tasks and stop using email to get projects done](https://nozbe.com/webinar)
 
+* [Radek's notes for Originals](http://radex.io/books/originals/)
+* [How to Fly a Horse: The Secret History of Creation, Invention, and Discovery](https://www.amazon.com/How-Fly-Horse-Invention-Discovery/dp/0804170061) ([Audible](http://www.audible.com/pd/Science-Technology/How-to-Fly-a-Horse-Audiobook/B00RY75S18))
+* [Outliers: The Story of Success](https://www.amazon.com/Outliers-Story-Success-Malcolm-Gladwell/dp/0316017930) ([Audible](http://www.audible.com/pd/Nonfiction/Outliers-Audiobook/B002UZDRK8))
+* [The Podcast 43 — why audiobooks?](/podcast-43)
+* [The Podcast 34 — on morning routines](/podcast-34)
+* [Jak oszczędzać pieniądze? (Polish blog about personal savings)](http://jakoszczedzacpieniadze.pl/)
+* [Interview with Sean Platt in Productive! Magazine №32](http://productivemag.com/32/interview-with-sean-platt)
+* [Join our productivity webinar: How to communicate through tasks and stop using email to get projects done](https://nozbe.com/webinar)
+
+[am]: https://www.amazon.com/dp/014312885X?tag=sliwinski-20
+[au]: https://www.audible.com/pd/B0CZWGH31S?tag=sliwinski-20
 [e]: /podcast-53
 [p]: /podcast
 [n]: https://michael.gratis/nozbe
