--- a/en/_posts/2016-10-10-podcast-67.md
+++ b/en/_posts/2016-10-10-podcast-67.md
@@ -1,12 +1,12 @@
 ---
-tags: [podcast]
+tags: [podcast,books]
 podcast: 1012329770
 img: "podcast-67.jpg"
 ---
 
 # The Podcast #67 - David and Goliath
 
-This week on [The Podcast][p] we continue our last week's discussion about beating the "big guys" with unconventional methods. Development, marketing, sales and much more. How we automate things, focus on problems and find out-of-the-box solutions. Basically how we use the constraints of our small team to be so successful on the current competitive market. 
+This week on [The Podcast][p] we continue our last week's discussion about beating the "big guys" with unconventional methods in the context of the book: *David and Goliath: Underdogs, Misfits, and the Art of Battling Giants* ([Amazon][am] or [Audible][au]). Development, marketing, sales and much more. How we automate things, focus on problems and find out-of-the-box solutions. Basically how we use the constraints of our small team to be so successful on the current competitive market. 
 
 <!--More-->
 
@@ -30,14 +30,15 @@ And if you're new here:
 
 ## Show notes for this episode:
 
-  * [David and Goliath: Underdogs, Misfits, and the Art of Battling Giants](https://www.amazon.com/David-Goliath-Underdogs-Misfits-Battling/dp/0316204374/) ([audible](http://www.audible.com/pd/Science-Technology/David-and-Goliath-Audiobook/B00EKQO0AG/))
-  * [Rework](https://www.amazon.com/Rework-Jason-Fried/dp/0307463745/) ([audible](http://www.audible.com/pd/Business/Rework-Audiobook/B0036FLXLQ/))
-  * [Essentialism: The Disciplined Pursuit of Less](https://www.amazon.com/Essentialism-Disciplined-Pursuit-Greg-McKeown/dp/0804137382/) ([audible](http://www.audible.com/pd/Self-Development/Essentialism-Audiobook/B00IWZ6XGA/))
-  * [The 4-Hour Workweek: Escape 9-5, Live Anywhere, and Join the New Rich](https://www.amazon.com/4-Hour-Workweek-Escape-Live-Anywhere/dp/0307465357/)
-  * [The Podcast 42 — on not being frugal (sometimes)](/podcast-42)
+
+* [Rework](https://www.amazon.com/Rework-Jason-Fried/dp/0307463745/) ([audible](http://www.audible.com/pd/Business/Rework-Audiobook/B0036FLXLQ/))
+* [Essentialism: The Disciplined Pursuit of Less](https://www.amazon.com/Essentialism-Disciplined-Pursuit-Greg-McKeown/dp/0804137382/) ([audible](http://www.audible.com/pd/Self-Development/Essentialism-Audiobook/B00IWZ6XGA/))
+* [The 4-Hour Workweek: Escape 9-5, Live Anywhere, and Join the New Rich](https://www.amazon.com/4-Hour-Workweek-Escape-Live-Anywhere/dp/0307465357/)
+* [The Podcast 42 — on not being frugal (sometimes)](/podcast-42)
 
 [e]: /podcast-67
-
+[am]: https://www.amazon.com/dp/0316204374?tag=sliwinski-20
+[au]: https://www.audible.com/pd/B00EKQO0AG?tag=sliwinski-20
 [p]: /podcast
 [n]: https://michael.gratis/nozbe
 [r]: https://michael.gratis/radex
