--- a/en/_posts/2016-10-15-podcast-68.md
+++ b/en/_posts/2016-10-15-podcast-68.md
@@ -1,15 +1,12 @@
 ---
-tags: [podcast]
+tags: [podcast,books]
 podcast: 1012329770
 img: "podcast-68.jpg"
 ---
 
 # The Podcast #68 - The Inevitable
 
-This week on [The Podcast][p] we discuss the book **The Inevitable** by Kevin Kelly (
-  [Audible](https://www.audible.com/pd/B01EB3PMYK?tag=sliwinski-20)
-  [Amazon](https://www.amazon.com/dp/0525428089?tag=sliwinski-20)
-) to discuss the technologies and trends that are going to shape the future. The author doesn't have all the answers. We don't have them as well, but we think the author is very good at pointing things out that are... well... inevitable:
+This week on [The Podcast][p] we discuss the book **The Inevitable** by Kevin Kelly ([Audible](https://www.audible.com/pd/B01EB3PMYK?tag=sliwinski-20), [Amazon](https://www.amazon.com/dp/0525428089?tag=sliwinski-20)) to discuss the technologies and trends that are going to shape the future. The author doesn't have all the answers. We don't have them as well, but we think the author is very good at pointing things out that are... well... inevitable:
 
 <!--More-->
 
