--- a/en/_posts/2016-11-25-podcast-74.md
+++ b/en/_posts/2016-11-25-podcast-74.md
@@ -1,12 +1,12 @@
 ---
-tags: [podcast]
+tags: [podcast,books]
 podcast: 1012329770
 img: "podcast-74.jpg"
 ---
 
 # The Podcast #74 - Disrupted
 
-This week on [The Podcast][p] we discuss a book by Dan Lyons about startups called "Disrupted". It's a humorist cautionary tale of how a company shouldn't be run and what's broken at the startup industry. We also argue that we think [Nozbe][n] never was a startup although we are in the technology industry. It's a short and good listen, so enjoy:
+This week on [The Podcast][p] we discuss a book by Dan Lyons about startups called "Disrupted" ([Amazon][am] or [Audible][au]). It's a humorist cautionary tale of how a company shouldn't be run and what's broken at the startup industry. We also argue that we think [Nozbe][n] never was a startup although we are in the technology industry. It's a short and good listen, so enjoy:
 
 <!--More-->
 
@@ -30,11 +30,12 @@ And if you're new here:
 
 ## Show notes for this episode:
 
-  * [Disrupted: My Misadventure in the Start-Up Bubble](https://www.amazon.com/Disrupted-My-Misadventure-Start-Up-Bubble/dp/0316306088/) ([audible](http://www.audible.com/pd/Bios-Memoirs/Disrupted-Audiobook/B01DDV7SXY/))
-  * [Productive Magazine](http://productivemag.com/)
-  * [ProductivityCourse.com](http://productivitycourse.com/)
-  * [David Heinemeier Hansson at Startup School](https://www.youtube.com/watch?v=0CDXJ6bMkMY)
+* [Productive Magazine](http://productivemag.com/)
+* [ProductivityCourse.com](http://productivitycourse.com/)
+* [David Heinemeier Hansson at Startup School](https://www.youtube.com/watch?v=0CDXJ6bMkMY)
 
+[am]: https://www.amazon.com/dp/0316306096?tag=sliwinski-20
+[au]: https://www.audible.com/pd/B01DDV7SXY?tag=sliwinski-20
 [e]: /podcast-74
 
 [p]: /podcast
