--- a/en/_posts/2017-01-20-podcast-80.md
+++ b/en/_posts/2017-01-20-podcast-80.md
@@ -1,14 +1,12 @@
 ---
-tags: [podcast]
+tags: [podcast,books]
 podcast: 1012329770
 img: "podcast-80.jpg"
 ---
 
 # The Podcast #80 - Peak
 
-Back after a break the first episode in 2017! This week on [The Podcast][p] we discuss the book **Peak** by Anders Ericsson
-  [Audible](https://www.audible.com/pd/B01F4D6XKI?tag=sliwinski-20)
-  [Amazon](https://www.amazon.com/dp/0544456238?tag=sliwinski-20) which has been one of the most important books for me over the last year and will influence the way I set goals for this year. It's all about deliberate practice and developing my skills for the future. Here's why:
+Back after a break the first episode in 2017! This week on [The Podcast][p] we discuss the book **Peak** by Anders Ericsson ([Audible](https://www.audible.com/pd/B01F4D6XKI?tag=sliwinski-20), [Amazon](https://www.amazon.com/dp/0544456238?tag=sliwinski-20)) which has been one of the most important books for me over the last year and will influence the way I set goals for this year. It's all about deliberate practice and developing my skills for the future. Here's why:
 
 <!--More-->
 
