--- a/en/_posts/2017-01-27-podcast-81.md
+++ b/en/_posts/2017-01-27-podcast-81.md
@@ -1,14 +1,12 @@
 ---
-tags: [podcast]
+tags: [podcast,books]
 podcast: 1012329770
 img: "podcast-81.jpg"
 ---
 
 # The Podcast #81 - Deliberate Practice
 
-This week on [The Podcast][p] we discussed what we've learned from the book **Peak** by Anders Ericsson
-( [Audible](https://www.audible.com/pd/B01F4D6XKI?tag=sliwinski-20), [Amazon](https://www.amazon.com/dp/0544456238?tag=sliwinski-20))
-and we dive deeper to explain the concept of "deliberate practice" with examples from our daily lives. It's a really important episode for us as it explains concepts that will be repeated throughout the next episodes of our podcast, so take your time to listen - it's only half an hour but it's worth it:
+This week on [The Podcast][p] we discussed what we've learned from the book **Peak** by Anders Ericsson ([Audible](https://www.audible.com/pd/B01F4D6XKI?tag=sliwinski-20), [Amazon](https://www.amazon.com/dp/0544456238?tag=sliwinski-20)) and we dive deeper to explain the concept of "deliberate practice" with examples from our daily lives. It's a really important episode for us as it explains concepts that will be repeated throughout the next episodes of our podcast, so take your time to listen - it's only half an hour but it's worth it:
 
 <!--More-->
 
