improved meetings post

--- a/en/_posts/2024-04-18-meetings.md
+++ b/en/_posts/2024-04-18-meetings.md
@@ -14,14 +14,14 @@ Finally decided to record a long-form video on my [new YouTube channel](/channel
 * TOC
 {:toc}
 
-## Introduction to Michaels
-
+> **Introduction to Michaels**\\
+>\\
 > **NoOffice guy**: Hi, I'm Michael, the [NoOffice](/nooffice) guy, the remote guy, I work from home, I believe that **work is not a place to go, it's a thing to do**. And you are?
 
 > **Office guy**: Hi, I'm the other Michael, the Office guy. I dress nicely. I go to an office every day, I practice management by walking around. I love running back-to-back meetings!
 
-## 3 meetings per week?
-
+> **3 meetings per week?**\\
+>\\
 > **N**: I also like meetings. I have two of them a week. Sometimes three.
 
 > **O**: Meetings are fun! But I understand you meant 3 meetings a day? That's really not that much…
@@ -30,17 +30,13 @@ Finally decided to record a long-form video on my [new YouTube channel](/channel
 
 > **O**: You have days without meetings? Sorry, but if that's so, you don't seem to care much about if your team is working at all. What kind of manager are you?!
 
-## [Nozbe][n] - projects, tasks and comments…
-
+> **[Nozbe][n] - projects, tasks and comments… vs meetings…**\\
+>\\
 > **N**: Oh, I do care. A lot. But as we have everything laid out in Nozbe in projects, tasks and comments, I know exactly what people are working on and where they need my feedback. And when they do, I write comments to their tasks, sometimes very long ones!
 
 > **O**: To me it seems like a waste of time to be typing long comments… I'm not a writer, I'm a manager!
 
-> **N**: Yeah, but if you don't write comments to tasks, then how do you provide people with your feedback?…
-
-## Calling people for a meeting be like…
-
-> **N**: …You call people up for a meeting?
+> **N**: Yeah, but if you don't write comments to tasks, then how do you provide people with your feedback? You call people up for a meeting?
 
 > **O**: Of course, I'm just like - let's have a quick meeting about this - let's go! I'm so efficient!
 
@@ -56,8 +52,8 @@ Finally decided to record a long-form video on my [new YouTube channel](/channel
 
 > **O**: When you put it that way, it doesn't sound good…
 
-## Meetings should be regular, optional and well-prepared…
-
+> **Meetings should be regular, optional and well-prepared…**\\
+>\\
 > **N**: Exactly, that's why… I believe meetings should be regular, optional and well prepared. Regular, meetings ensure that people can plan their day. For example, my leadership meeting is every Monday at 10:30 and lasts about an hour, sometimes hour and a half.
 
 > **O**: OK, regular. Got it. And optional?
@@ -70,12 +66,10 @@ Finally decided to record a long-form video on my [new YouTube channel](/channel
 
 > **O**: Ohh, that sounds like lots of work!
 
-> **N**: Not really if you do it like we do - in a project our agenda points are tasks and all of them have comments or files attached to them…
+> **N**: Not really if you do it like we do - in a project our agenda points are tasks and all of them have comments or files attached to them. Sometimes in these comments we resolve the issues and when we do, it's another reason to cancel this week's meeting.
 
-## More time for DEEP WORK…
-
-> **N**: …Sometimes in these comments we resolve the issues and when we do, it's another reason to cancel this week's meeting.
-
+> **More time for DEEP WORK…**\\
+>\\
 > **O**: And when that happens, what do you do?
 
 > **N**: We actually have more time to do the work we were hired to do! We have more time for deep work!
