--- a/en/_posts/2024-04-18-meetings.md
+++ b/en/_posts/2024-04-18-meetings.md
@@ -11,8 +11,7 @@ Finally decided to record a long-form video on my [new YouTube channel](/channel
 
 <!--More-->
 
-* TOC
-{:toc}
+## Michaels argue about meetings - transcript:
 
 > **Introduction to Michaels**\\
 >\\
