--- a/en/_posts/2024-04-29-now240429.md
+++ b/en/_posts/2024-04-29-now240429.md
@@ -19,7 +19,7 @@ First quarter of 2024 is done. Lots of new things happened at [Nozbe][n] and in 
 * I hosted an updated [Nozbe 10-steps webinar](/10steps-webinar)
 * Last week we have decided NOT to grant people a free trial of Nozbe but give them a free month instead - [there’s a big difference](https://nozbe.com/free?c=michaelteam)
 
-## …and when I can, I'm also:
+## …and additionally:
 
 * I published more [Shortcuts](/shortcuts) like [rolling the dice](/dice-shortcut) or [WatchNotes](/watchnotes) for my Apple Watch [Ultra](/ultra)
 * I launched a [new YouTube Channel **@MichaelTeam**](/channel) where I’m publishing mainly shorts, but also a new video of [two Michaels arguing about meetings](/meetings)
