--- a/en/_posts/2024-04-30-visiting.md
+++ b/en/_posts/2024-04-30-visiting.md
@@ -2,9 +2,10 @@
 tags: [nooffice]
 cover: "visiting.jpg"
 social: "visiting.jpg"
+m: https://social.nozbe.com/@michael/112361611505886785
 ---
 
-# Visiting a city is an opportunity to reconnect with people for someone working remotely
+# Visiting a city is an opportunity to reconnect with people, especially if you're working remotely
 
 I run [my company](/nozbe/) completely remotely. We have [no office](/nooffice). That's why whenever I visit a city I try to maximize my stay by checking in with people I know are from there. Is anyone from my [Nozbe][n] team there? Any of our partners? Customers?… and I try to schedule in-person meetings so we can hang out and enjoy each other's company for a while and strengthen our personal bonds. Here's a recap of my recent day in Wrocław:
 
