case instead of cover

--- a/en/_posts/2024-05-06-case.md
+++ b/en/_posts/2024-05-06-case.md
@@ -1,23 +1,30 @@
 ---
 tags: [iphone,gadgets,featured]
-
+cover: "case.jpg"
+social: "case.jpg"
+redirect_from: /cover/
 ---
 
 # Perfect iPhone 15 Pro case is… Peak Design? Spigen? Mous? Pitaka?…
 
 The trouble with [iPhone 15 Pro](/iphone15) or [my previous 15 Mini](/mini13) any other [iPhones](/iphone) for that matter is that I can't use them case-less. I've tried and I'm just too stressed about the iPhone when it's outside of the case. But… the cases add bulk and weight to the otherwise lighter and smaller titanium iPhone. So I started searching for a perfect case which would offer a basic protection and would be as slim and light as can be. Here's what I've got:
 
-![{{ page.title }} 2](/img/cover-2.jpg)
+<!--More-->
+
+![{{ page.title }}](/img/{{ page.cover }})
+
+* TOC
+{:toc}
 
 ## Best all-around case: Peak Design Everyday Case
 
 I love stuff by [Peak Design](https://www.peakdesign.com) and as a [triathlete](/sports) I love their bike mounting system so whenever I'm out and about doing sports I use the [Everyday Case (Midnight blue color)][p].
 
-![{{ page.title }} peak](/img/cover-peak.jpg)
+![{{ page.title }} peak](/img/case-peak.jpg)
 
 This case supports both [Magsafe](/magsafe) and their system so I have their [Out Front Bike Mount][p1] on my road bike and [Universal Bike Mount][p2] on my mountain bike and in my [travel pouch](/pouch).
 
-![{{ page.title }} peak-mount](/img/cover-peak-mount.jpg)
+![{{ page.title }} peak-mount](/img/case-peak-mount.jpg)
 
 What I love about Peak Design is that even though I ordered the case early and the first version of it didn't have a button for the [Action button](/action) they later they rectified it and sent me the updated version, which I really appreciate. Anyway, it's a great sturdy case but it's not my daily case…
 
@@ -25,7 +32,7 @@ What I love about Peak Design is that even though I ordered the case early and t
 
 A transparent case is awesome to show off my *Blue Titanium* color and it was my first choice for an every day case. It's called [Spigen MagFit][sp].
 
-![{{ page.title }} spigen](/img/cover-spigen.jpg)
+![{{ page.title }} spigen](/img/case-spigen.jpg)
 
 The case is great, transparent, offers great protection and after a few months it holds up pretty well. But again, now it's not my daily case anymore…
 
@@ -33,7 +40,7 @@ The case is great, transparent, offers great protection and after a few months i
 
 I've ordered the [Mous Super Thin][ms] case together with the [Mous 5.0 Limitless][ml] as per recommendation of a [YouTuber][y].
 
-![{{ page.title }} mous](/img/cover-mous.jpg)
+![{{ page.title }} mous](/img/case-mous.jpg)
 
 However, the *Limitless* case, being really well done and all, is very bulky and heavy (42 grams) and since I've already got a bulky case in the Peak Design one, with a bike attachment as a bonus, I returned it, but I stayed with the *Super Thin* and I loved it until very recently. This has been my main daily case for the last few months, until I watched that same [YouTuber video on carbon-fiber cases][yc] and bought…
 
@@ -41,7 +48,7 @@ However, the *Limitless* case, being really well done and all, is very bulky and
 
 This case is the thinnest and lightest of them all and it's also very nice to hold with the carbon fiber all over it. It's [Pitaka's latest version 5 of MagEZ cases][pi].
 
-![{{ page.title }} pitaka](/img/cover-pitaka.jpg)
+![{{ page.title }} pitaka](/img/case-pitaka.jpg)
 
 I've just gotten it last week and I can't believe how thin and light it is. And how much I love it. Yes, I know it won't offer me the best protection (for that I have the Peak Design case) but it will still protect both the cameras, the edges of the iPhone and the screen (nope, I don't use a screen protector).
 
@@ -49,31 +56,31 @@ I've just gotten it last week and I can't believe how thin and light it is. And 
 
 I think Apple made a mistake when designing the MagSafe port placement on the iPhone 15 Pro, because it's very high and close to the cameras. This makes it very tough to work fit some of the [MagSafe](/magsafe) accessories. Here Mous made a better design decision by having the camera edge protection go down to where the MagSafe port is, here's the comparison:
 
-![{{ page.title }} cameras](/img/cover-cameras.jpg)
+![{{ page.title }} cameras](/img/case-cameras.jpg)
 
 Pitaka completely didn't address this and their case doesn't work well with my two favorite magsafe accessories - the car charger and the MagSafe Duo Charger:
 
-![{{ page.title }} magsafe](/img/cover-magsafe.jpg)
+![{{ page.title }} magsafe](/img/case-magsafe.jpg)
 
 As I was writing this, I decided to take the matters into my own hands, and I upgraded the Pitaka case using a knife (and Duct tape for protection):
 
-![{{ page.title }} upgrade](/img/cover-upgrade.jpg)
+![{{ page.title }} upgrade](/img/case-upgrade.jpg)
 
 ## Weight comparison of all these cases: from 43 grams down to only 14 grams!
 
 When you look at all these cases, they still weigh a lot. The [Peak Design][p] weighs 43 grams, the [silicone Spigen][sp] 34 grams, the [Mous Super Thin][ms] is lighter at 27 grams… but the [Pitaka v5][pi] is almost half of that at only 14 grams!
 
-![{{ page.title }} weight](/img/cover-weight.jpg)
+![{{ page.title }} weight](/img/case-weight.jpg)
 
 ## My iPhone 15 Pro doesn't weigh much more than the 13 Mini!
 
 When I compare my outgoing [iPhone 13 Mini](/mini13) with its Peak Design case (175 grams) to the 15 Pro with the Pitaka case (199 grams), you can see the difference is only 14 grams - while my wife's iPhone 13 Pro Max with a Kate Spade cover weighs a whopping 280 grams:
 
-![{{ page.title }} weight-phones](/img/cover-weight-phones.jpg)
+![{{ page.title }} weight-phones](/img/case-weight-phones.jpg)
 
 And when you see size comparison, the new phone is barely wider and only taller. That's the difference between a bulky case and a truly thin case:
 
-![{{ page.title }} size](/img/cover-size.jpg)
+![{{ page.title }} size](/img/case-size.jpg)
 
 That's why my new iPhone 15 Pro with such a slim case, feels very *mini*!
 
@@ -81,7 +88,7 @@ That's why my new iPhone 15 Pro with such a slim case, feels very *mini*!
 
 My default [iWallet](/iwallet) for quite some time has been the [MOFT MagSafe Wallet][m], especially the *blue carbon version*. However, I noticed they recently launched a newer version called *MOVAS* with eco leather and stronger magnets so I bought it, however I later retuned it, because it was simply heavier:
 
-![{{ page.title }} moft](/img/cover-moft.jpg)
+![{{ page.title }} moft](/img/case-moft.jpg)
 
 In the end there is a big weight version between these Moft wallets. My OG leather one [which I've had for more than 2 years](/iwallet) weighs 42 grams, the newer [blue carbon version][m] weighs 39 grams and the new MOVAS with eco leather a stunning 50% more… or 61 grams! This way my wallet with my driver's license, personal ID, credit card an one bill weighs 54 grams.
 
@@ -93,7 +100,7 @@ That's why in the end I'll be using these:
 - [Peak Design Everyday][p] when doing sports
 - [MOFT carbon-fiber wallet][m] as my [iWallet](/iwallet) when I'm going out and need documents and cash on me.
 
-![{{ page.title }} setup](/img/cover-setup.jpg)
+![{{ page.title }} setup](/img/case-setup.jpg)
 
 That's my setup today, what's yours?
 
