--- a/en/_posts/2024-05-06-case.md
+++ b/en/_posts/2024-05-06-case.md
@@ -46,7 +46,7 @@ However, the *Limitless* case, being really well done and all, is very bulky and
 
 ## Best thinnest and lightest case: Pitaka Sunset-Moonrise MagEZ Case 5
 
-This case is the thinnest and lightest of them all and it's also very nice to hold with the carbon fiber all over it. It's [Pitaka's latest version 5 of MagEZ cases][pi].
+This case is the thinnest and lightest of them all and it's also very nice to hold with the carbon fiber all over it. It's [Pitaka's version 5 of MagEZ case][pi].
 
 ![{{ page.title }} pitaka](/img/case-pitaka.jpg)
 
@@ -58,13 +58,15 @@ I think Apple made a mistake when designing the MagSafe port placement on the iP
 
 ![{{ page.title }} cameras](/img/case-cameras.jpg)
 
-Pitaka completely didn't address this and their case doesn't work well with my two favorite magsafe accessories - the car charger and the MagSafe Duo Charger:
+Pitaka didn't address this and their case doesn't work well with my two favorite magsafe accessories - the car charger and the MagSafe Duo Charger:
 
 ![{{ page.title }} magsafe](/img/case-magsafe.jpg)
 
 As I was writing this, I decided to take the matters into my own hands, and I upgraded the Pitaka case using a knife (and Duct tape for protection):
 
 ![{{ page.title }} upgrade](/img/case-upgrade.jpg)
+
+After the "upgrade", the MagSafe port works much better!
 
 ## Weight comparison of all these cases: from 43 grams down to only 14 grams!
 
@@ -90,7 +92,7 @@ My default [iWallet](/iwallet) for quite some time has been the [MOFT MagSafe Wa
 
 ![{{ page.title }} moft](/img/case-moft.jpg)
 
-In the end there is a big weight version between these Moft wallets. My OG leather one [which I've had for more than 2 years](/iwallet) weighs 42 grams, the newer [blue carbon version][m] weighs 39 grams and the new MOVAS with eco leather a stunning 50% more… or 61 grams! This way my wallet with my driver's license, personal ID, credit card an one bill weighs 54 grams.
+In the end there is a big weight difference between these Moft wallets. My OG leather one [which I've had for more than 2 years](/iwallet) weighs 42 grams, the newer [blue carbon version][m] weighs 39 grams and the new MOVAS with eco leather a stunning 50% more… or 61 grams! It's more than my blue carbon wallet with my driver's license, personal ID, credit card an one bill which total only 54 grams. Weight matters!
 
 ## When it comes to cases, it's a trade off between protection, bulk and weight!
 
