Updates, trial news and more shorts

--- a/en/_posts/2020-11-05-youtube.md
+++ b/en/_posts/2020-11-05-youtube.md
@@ -56,7 +56,8 @@ Feel free to use my new special page together with the Shortcut. **Share it with
 
 **[Go to Michael.team/yt and enjoy!](/yt/)**
 
-[shortcut]: https://www.icloud.com/shortcuts/a45cec1e83944253b6c0bd3cb2915bc4
+[shortcut]: https://www.icloud.com/shortcuts/1b20e7375c9f4a17b418f75736da46a1
+[shortcutx]: https://www.icloud.com/shortcuts/a45cec1e83944253b6c0bd3cb2915bc4
 
 ![{{ page.title }}](/img/{{ page.cover }})
 
