--- a/en/_posts/2022-04-28-markdown.md
+++ b/en/_posts/2022-04-28-markdown.md
@@ -1,5 +1,5 @@
 ---
-tags: [productivity,featured]
+tags: [productivity,shortcuts,featured]
 img: "markdown.jpg"
 ---
 
@@ -64,6 +64,12 @@ Most text editors for MacOS or iOS (just like the [iA Writer](https://ia.net/wri
 ## Thank you [John Gruber][d]!
 
 Thanks John (and [Aaron Swartz](https://en.wikipedia.org/wiki/Aaron_Swartz)) for coming up with [Markdown][m]. I can't believe it was conceived back in 2004 and it sure took the time to become mainstream among geeks like me. However now I cannot imagine writing blog posts and books in any other format. This is the way I want to keep writing my stuff and I encourage you to do the same!
+
+## Bonus: Shortcut to "Copy link to markdown format"
+
+To help me write in Markdown, I've created a special shortcut that converts a link either into a format of `[NAME OF LINK](link)` or creates an embed code when it's a [YouTube](/youtube/) link:
+
+**[🔗 Link To Markdown](https://www.icloud.com/shortcuts/4a7ee7378c664ad58f0f265ce59d9011)**
 
 [l]: https://sive.rs/plaintext
 [m]: https://daringfireball.net/projects/markdown/
