--- a/en/_posts/2024-03-12-channel.md
+++ b/en/_posts/2024-03-12-channel.md
@@ -1,15 +1,16 @@
 ---
 tags: [vlog,video,featured]
-img: "channel.jpg"
+vid: "JZfoEVKmaU8"
+m: https://social.nozbe.com/@michael/112449042960253986
 ---
 
 ## Subscribe to my new "Michael Team" YouTube Channel for daily productivity tips and tricks - my first 10 videos!
 
-I've been on and off YouTube for a long time. I've had my [Productive! Show](/show/) back in the day when I was running [Productive! Magazine](/magazine/), but I never stuck to it. Our official [Nozbe YouTube Channel][ny] is OK, but my team finally convinced me to try posting "Shorts/Reels" on both my [Instagram][i] and my new [**@MichaelTeam** YouTube Channel][y] and after more than a week here are the 10 videos I posted:
+I've been on and off YouTube for a long time. I've had my [Productive! Show](/show/) back in the day when I was running [Productive! Magazine](/magazine/), but I never stuck to it. Our official [Nozbe YouTube Channel][ny] is OK, but my team finally convinced me to try posting "Shorts/Reels" on both my [Instagram][i] and my new [**@MichaelTeam** YouTube Channel][y] and after more than a week here are the 10 videos I posted (and first comes the channel trailer):
+
+{% include video.html id=page.vid %}
 
 <!--More-->
-
-![{{ page.title }}](/img/{{ page.img }})
 
 * TOC
 {:toc}
