--- a/en/_posts/2024-04-18-meetings.md
+++ b/en/_posts/2024-04-18-meetings.md
@@ -1,5 +1,5 @@
 ---
-tags: [vlog,video,featured]
+tags: [vlog,video,news,featured]
 vid: "XNq7Lln4noo"
 m: https://social.nozbe.com/@michael/112297311027499552
 l: https://www.linkedin.com/pulse/3-meetings-per-week-less-how-two-michaels-argue-people-sliwinski-quuuf/
