--- a/en/_posts/2024-05-06-case.md
+++ b/en/_posts/2024-05-06-case.md
@@ -23,7 +23,11 @@ I love stuff by [Peak Design](https://www.peakdesign.com) and as a [triathlete](
 
 ![{{ page.title }} peak](/img/case-peak.jpg)
 
-This case supports both [Magsafe](/magsafe) and their system so I have their [Out Front Bike Mount][p1] on my road bike and [Universal Bike Mount][p2] on my mountain bike and in my [travel pouch](/pouch).
+This case supports both [Magsafe](/magsafe) and their system so I have their [Out Front Bike Mount][p1] on my road bike:
+
+![{{ page.title }} bike-mount](/img/case-bike-mount.jpg)
+
+…and [Universal Bike Mount][p2] on my mountain bike and in my [travel pouch](/pouch).
 
 ![{{ page.title }} peak-mount](/img/case-peak-mount.jpg)
 
@@ -43,7 +47,7 @@ I've ordered the [Mous Super Thin][ms] case together with the [Mous 5.0 Limitles
 
 ![{{ page.title }} mous](/img/case-mous.jpg)
 
-However, the *Limitless* case, being really well done and all, is very bulky and heavy (42 grams) and since I've already got a bulky case in the Peak Design one, with a bike attachment as a bonus, I returned it, but I stayed with the *Super Thin* and I loved it until very recently. This has been my main daily case for the last few months, until I watched that same [YouTuber video on carbon-fiber cases][yc] and bought…
+However, the [Mous Limitless 5.0 case][ml], being really well done and all, is very bulky and heavy (42 grams) and since I've already got a bulky case in the Peak Design one, with a bike attachment as a bonus, I returned it, but I stayed with the *Super Thin* and I loved it until very recently. This has been my main daily case for the last few months, until I watched that same [YouTuber video on carbon-fiber cases][yc] and bought…
 
 ## Best thinnest and lightest case: Pitaka Sunset-Moonrise MagEZ Case 5
 
@@ -107,6 +111,7 @@ That's why in the end I'll be using these:
 
 That's my setup today, what's yours?
 
+[ml]: https://www.amazon.com/dp/B0CFR3K4XT/?tag=sliwinski-20
 [m]: https://www.amazon.com/dp/B0933PKQGM/?tag=sliwinski-20
 [mo]: https://www.amazon.com/dp/B0D2KSXGCM/?tag=sliwinski-20
 [pi]: https://www.amazon.com/dp/B0CPLMW21F/?tag=sliwinski-20
